# vet-researcher

./: .env.example  .gitignore  .npmrc  README.md  example2.py  med-example.py  mise.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  turbo.json
apps/api/: README.md  package.json  pyproject.toml  setup.py
apps/api/src/api/: __init__.py  main.py  models.py
apps/api/vet_researcher/api/: __init__.py  main.py
apps/web/: background-gradient.tsx  globals.css  package.json  text-generate-effect.tsx
apps/web/app/components/: background-beams.tsx
apps/web/app/routes/: _index.tsx
vet_researcher/api/: main.py  models.py
vet_researcher/cli/: main.py
vet_researcher/core/: agents.py  workflow.py
